<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appList"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />
    <Button
        style="@style/ButtonStyle"
        android:layout_marginTop="70dp"
        android:text="@string/spotifyButton"
        android:id="@+id/spotifyButton"
        android:onClick="launchSpotifyStreamer" />
    <Button
        style="@style/ButtonStyle"
        android:text="@string/scoresButton"
        android:id="@+id/scoresButton"
        android:onClick="launchScoresApp" />
    <Button
        style="@style/ButtonStyle"
        android:text="@string/libraryButton"
        android:id="@+id/libraryButton"
        android:onClick="launchLibraryApp" />
    <Button
        style="@style/ButtonStyle"
        android:text="@string/buildItBiggerButton"
        android:id="@+id/builtItBiggerButton"
        android:onClick="launchBuilditBigger" />
    <Button
        style="@style/ButtonStyle"
        android:text="@string/xyzReaderButton"
        android:id="@+id/xyzReaderButton"
        android:onClick="launchXyzReader" />
    <Button
        style="@style/ButtonStyle"
        android:text="@string/capstoneButton"
        android:id="@+id/capstoneButton"
        android:background="@drawable/capstone_button"
        android:onClick="launchCapstoneApp"/>
</LinearLayout>